test/js/bun/util/__snapshots__/reportError.test.ts.snap
// Bun Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`reportError 1`] = `
"1 | reportError(new Error("reportError Test!"));
                ^
error: reportError Test!
      at /reportError.ts:1:13
error: true
error: false
error: null
error: 123
error: Infinity
error: NaN
error: NaN
error
error
error
error
error
error: string
error
error
error
error
"
`;
